# webserv

./: -Wno-framework-include-private-from-public  .gitignore  .htpasswd  CGIRequest.cpp  CGIRequest.hpp  CMakeLists.txt  Config.cpp  Config.hpp  ConfigParser.cpp  ConfigParser.hpp  ENV.h  Exceptions.cpp  Exceptions.hpp  Helper.cpp  Helper.hpp  Location.cpp  Location.hpp  Makefile  README.md  Reader.cpp  Reader.hpp  Request.cpp  Request.hpp  Response.cpp  Response.h  Response.hpp  Server.cpp  Server.hpp  ServerEnvironment.cpp  ServerEnvironment.hpp  ServerListener.cpp  ServerListener.hpp  a.out  eval.conf  http_exception.cpp  http_exception.hpp  includes.hpp  main.cpp  test.conf  test2.conf  (+1 more)
HTTP/: CGIRequest.cpp  CGIRequest.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp
Helpers/: Helper.cpp  Helper.hpp  Reader.cpp  Reader.hpp
Server/: Client.cpp  Client.hpp  RequestParser.cpp  RequestParser.hpp  Server.cpp  Server.hpp  ServerCluster.cpp  ServerCluster.hpp  ServerEnvironment.cpp  ServerEnvironment.hpp  ServerListener.cpp  ServerListener.hpp
Server/Config/: Config.cpp  Config.hpp  ConfigParser.cpp  ConfigParser.hpp  Location.cpp  Location.hpp
cgi/: a.out  cgi.c  cgi.cpp
conf/: default.conf  eval.conf  test.conf  test2.conf
exceptions/: file_not_found_exception.cpp  file_not_found_exception.hpp  http_exception.cpp  http_exception.hpp  webserv_exceptions.hpp
html/: custom.html
public/: image.html  post_body
public/YoupiBanane/: youpi.bla
public/put_test/: file_should_exist_after
public/test/: tester.html
sectest/: A_CHTO
static_html/: custom.html  error.html
test.public/: lol4e
tmp/: tmp_big_in.txt  tmp_in.txt  tmp_out.txt
